--- a/onnx_interpreter/Cargo.toml
+++ b/onnx_interpreter/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 prost = "0.12.3"
 prost-types = "0.12.3"
+ndarray = "0.15.6"
+onnx = "0.1.0"
 
 [build-dependencies]
 prost-build = { version = "0.12.3" }
