--- a/onnx_interpreter/Cargo.toml
+++ b/onnx_interpreter/Cargo.toml
@@ -8,7 +8,9 @@ edition = "2021"
 [dependencies]
 prost = "0.12.3"
 prost-types = "0.12.3"
-ndarray = "0.15.6"
+ndarray =  { version = "0.15.6", features = ["rayon"] }
+num-traits = "0.2"
+rayon = "1.8.0"
 onnx = "0.1.0"
 
 [build-dependencies]
