--- a/onnx_interpreter/Cargo.toml
+++ b/onnx_interpreter/Cargo.toml
@@ -12,6 +12,7 @@ ndarray =  { version = "0.15.6", features = ["rayon"] }
 num-traits = "0.2"
 rayon = "1.8.0"
 onnx = "0.1.0"
+ndarray-parallel = "0.9.1"
 
 [build-dependencies]
 prost-build = { version = "0.12.3" }
