--- a/onnx_interpreter/Cargo.toml
+++ b/onnx_interpreter/Cargo.toml
@@ -12,6 +12,9 @@ ndarray =  { version = "0.15.6", features = ["rayon"] }
 num-traits = "0.2"
 rayon = "1.8.0"
 onnx = "0.1.0"
+rand = "0.8.5"
+ndarray-rand = "0.14.0"
+ndarray-parallel = "0.9.1"
 ndarray-parallel = "0.9.1"
 
 [build-dependencies]
