added other operations

--- a/onnx_interpreter/Cargo.toml
+++ b/onnx_interpreter/Cargo.toml
@@ -15,6 +15,7 @@ onnx = "0.1.0"
 rand = "0.8.5"
 ndarray-rand = "0.14.0"
 ndarray-parallel = "0.9.1"
+ndarray-stats = "0.5.1"
 
 [build-dependencies]
 prost-build = { version = "0.12.3" }
